@@ -1,4 +1,4 @@
-package com.skydude.dacxirons.spells;
+package com.skydude.dacxirons.spells.Blood;
 
 
 import com.skydude.dacxirons.dacxirons;
@@ -10,7 +10,6 @@ import io.redspace.ironsspellbooks.api.registry.SchoolRegistry;
 import io.redspace.ironsspellbooks.api.spells.*;
 import io.redspace.ironsspellbooks.damage.DamageSources;
 import net.mcreator.dungeonsandcombat.entity.BloodyArrowEntity;
-import net.mcreator.dungeonsandcombat.entity.MagicArrowEntity;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.resources.ResourceLocation;
